# cognitive-production-dashboard

./: package-lock.json  package.json
backend/: .env  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: data.py  ws.py
backend/tests/: test_basic.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Charts/: LineChart.tsx
frontend/src/components/Filters/: DashboardFilters.tsx  FiltersPanel.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/KPI/: KPIcard.tsx
frontend/src/components/layouts/: MainLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/layouts/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Historical.tsx  MachinesOverview.tsx  Settings.tsx
frontend/src/services/: api.ts
